--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,6 @@
-<div class="footer">
-<div class="row">
+<html><script type='text/javascript' src="http://code.jquery.com/jquery-latest.pack.js"></script>
 
-	<div class="col-sm-12">mit <a href="https://github.com/angular/angular-cli">Angular CLI</a>, <a href="https://github.com/socketio/socket.io">socket.io</a>, <a href="https://github.com/twbs/bootstrap">Bootstrap</a> und &#9829; gebaut von root</div>
+<div class="footer col-lg-12 col-sm-12">mit <a href="https://github.com/angular/angular-cli"><u>Angular CLI</u></a>, <a href="https://github.com/twbs/bootstrap"><u>Bootstrap</u></a>, <a href="https://socket.io"><u>Socket.io</u></a> und ❤️ gebaut von Stefan, <a href="http://rootchat.cf:8090/delete" style = "text-decoration: none">Benjamin</a>, Nicola, Andreas und Chiara</div>
 
-</div>
-</div>
+
+
