--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="header">
 <div class="row">
 
-	<div class="col-sm-3"><h1><p></p>rootchat</h1></div>
-	<div class="col-sm-6"></div>
-	<div class="col-sm-3"><img src="http://senntee.ch/unisg.png" width="55%" height="auto" alt="HSG" class="desktop-only"></div>
+	<!--<div class="col-sm-3 col-lg-3"><h1><p></p>The Floor is Java</h1></div>
+	<div class="col-sm-6 col-lg-6"></div>-->
+	<div class="col-sm-12 col-lg-12"><img src="../../../assets/tflis.png" width="25%" height="auto" alt="HSG" class="desktop-only"></div>
 
 </div>
 </div>
