--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,12 +1,12 @@
-<div class="row">
+<div class="background row">
 	
-	<div class="col-sm-2"></div>
-	<div class="col-sm-8 chatcontent">
+	<div class=" background col-sm-2"></div>
+	<div class="background col-sm-8 chatcontent">
 
 		<app-rootform></app-rootform>
 
 	</div>
 
-	<div class="col-sm-2"></div>
+	<div class="background col-sm-2"></div>
   
   </div>
