--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,6 +1,20 @@
 .footer {
-        border-top: 2px solid black;
+        border-top: 1px solid lightslategrey;
         text-align: center;
         vertical-align: center;
-	padding-top: 20px;
-}
+        background-color: #00802f;
+        color: white;
+        position:absolute;
+        bottom:0;
+        width:100%;
+        padding-right: 0px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .footer a {
+        color: white;
+    
+    }
+    
+
+    
