--- a/src/app/rootform/rootform.component.html
+++ b/src/app/rootform/rootform.component.html
@@ -1,8 +1,8 @@
-	<div class="container">
+	<div class="nachrichten container">
   		<h3>Nachrichten</h3>
 
-		<div class="divTextArea form-control" ngx-auto-scroll>
-			<div class="divTextAreaInner" [innerHTML]="messageHistory">
+		<div class="divTextArea form-control"  ngx-auto-scroll>
+			<div class="divTextAreaInner"  [innerHTML]="messageHistory">
 			</div>
 		</div>
 	</div>
@@ -16,10 +16,10 @@
                 <form>
                 <div class="form-group">
                         <p><p><h3>Eingabefeld</h3>
-			<textarea type="text" rows="1" placeholder="Dein Nickname" class="form-control" id="nickname" required [(ngModel)]="nickname" name="nick"> </textarea>
-                        <p><p><textarea type="text" rows="2" placeholder="Deine Nachricht" (keyup.enter)="addMessage(chatMessage.message)" class="form-control" ngx-auto-scroll id="message" required [(ngModel)]="chatMessage.message" name="message"> </textarea>
+			<textarea type="text" rows="1" placeholder="Dein Nickname" class="eingabefeld form-control" id="nickname" required [(ngModel)]="nickname" name="nick"> </textarea>
+                        <p><p><textarea type="text" rows="2" placeholder="Deine Nachricht" (keyup.enter)="addMessage(chatMessage.message)" class="eingabefeld form-control" ngx-auto-scroll id="message" required [(ngModel)]="chatMessage.message" name="message"> </textarea>
                 </div>
-                <button (click)="addMessage(chatMessage.message)" [disabled]="!chatMessage.message" class="btn btn-default">Abschicken</button>
+		<div class="knopf"><button (click)="addMessage(chatMessage.message)" [disabled]="!chatMessage.message" class="btn btn-default">Absenden</button> </div>
                 </form>
 
 
