--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -13,7 +13,8 @@
     	margin-left: 140px;
     	z-index: 100;
         vertical-align: middle;
-        margin-top: 6px;
+		margin-top: 6px;
+		margin-bottom: 6px;
 }
 
 .text {
