--- a/src/app/rootform/rootform.component.html
+++ b/src/app/rootform/rootform.component.html
@@ -17,7 +17,7 @@
                 <div class="form-group">
                         <p><p><h3>Eingabefeld</h3>
 			<textarea type="text" rows="1" placeholder="Dein Nickname" class="eingabefeld form-control" id="nickname" required [(ngModel)]="nickname" name="nick"> </textarea>
-                        <p><p><textarea type="text" rows="2" placeholder="Deine Nachricht" (keyup.enter)="addMessage(chatMessage.message)" class="eingabefeld form-control" ngx-auto-scroll id="message" required [(ngModel)]="chatMessage.message" name="message"> </textarea>
+			<p><p><textarea type="text" rows="2" placeholder="Deine Nachricht" (keydown.enter)="addMessage(chatMessage.message);false" class="eingabefeld form-control" ngx-auto-scroll id="message" required [(ngModel)]="chatMessage.message" name="message"> </textarea>
                 </div>
 		<div class="knopf"><button (click)="addMessage(chatMessage.message)" [disabled]="!chatMessage.message" class="btn btn-default">Absenden</button> </div>
                 </form>
